--- a/index.html
+++ b/index.html
@@ -223,34 +223,34 @@
     </section>
     <!-- Call to Action -->
     <section class="content-section bg-primary text-white" id="Ban-Appeal">
-        <div class="container px-4 px-lg-5 text-center">
+        <div class="container px-4 px-lg-5 text-center lead mb-5">
             <h2 class="mb-4">Loved what you have seen, then dont delay and join today!</h2>
             <a class="btn btn-xl btn-light me-4" href="https://discord.gg/uYe6JuTGPM">Join us now!</a>
             <a class="btn btn-xl btn-dark" href="#Chuu'topia">To the top!</a>
         </div>
-        <div class="content-section bg-primary text-white">
-            <div class="container px-4 px-lg-5 text-center">
-                <h4 class="mb-4">If you wish to appeal a ban, then please contact us on the email below.</h4>
-                <img class="img-fluid" src="assets/img/appealschuutopiaemail.png" alt="" />
-                <div>
-                    <!-- Footer -->
-                    <footer class="footer text-center">
-                        <div class="container px-4 px-lg-5">
-                            <ul class="list-inline mb-4">
-                                <li class="list-inline-item">
-                                    <a class="social-link rounded-circle text-white mr-3"
-                                        href="https://twitter.com/chuu_topia"><i class="icon-social-twitter"></i></a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a class="social-link rounded-circle text-white"
-                                        href="https://www.instagram.com/chuutopian"><i
-                                            class="icon-social-instagram"></i></a>
-                                </li>
-                            </ul>
-                            <p class="text small mb-0">Website design: &copy; www.chuutopia.com 2021</p>
-                            <p class="text small mb-0">Images: &copy; The Respective Artists, LOONA and Chuu 2021</p>
-                        </div>
-                    </footer>
+        <div class="container px-4 px-lg-5 text-center">
+            <h4 class="mb-4">If you wish to appeal a ban, then please contact us on the email below.</h4>
+            <img class="img-fluid" src="assets/img/appealschuutopiaemail.png" alt="" />
+            <div>
+                <!-- Footer -->
+                <footer class="footer text-center">
+                    <div class="container px-4 px-lg-5">
+                        <ul class="list-inline mb-4">
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white mr-3"
+                                    href="https://twitter.com/chuu_topia"><i class="icon-social-twitter"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white"
+                                    href="https://www.instagram.com/chuutopian"><i
+                                        class="icon-social-instagram"></i></a>
+                            </li>
+                        </ul>
+                        <p class="text small mb-0">Website design: &copy; www.chuutopia.com 2021</p>
+                        <p class="text small mb-0">Images: &copy; The Respective Artists, LOONA and Chuu 2021</p>
+                    </div>
+            </div>
+        </div>
     </section>
     <!-- Scroll to Top Button -->
     <a class="scroll-to-top rounded" href="#Chuu'topia"><i class="fas fa-angle-up"></i></a>
