--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
                                         </a>
                                     </li>
                                 </ul>
+                                <div>
+                                    <img class="img-fluid"
+                                        src="https://static.wikia.nocookie.net/loonatheworld/images/c/cc/Queendom_2_logo_transparent.png/revision/latest/scale-to-width-down/350?cb=20220308081156"
+                                        alt="Queendom 2 Logo" />
+                                    <p class="lead mb-5">
+                                        <a href="https://www.youtube.com/watch?v=ytuMObZlqOE" target="_blank">Orbits,
+                                            show your support
+                                            today by streaming Loona!</a>
+                                    </p>
+                                    <iframe height="95px" width="310px" frameborder="0"
+                                        src="https://socialcounts.org/compare/youtube-video-live-view-count/ytuMObZlqOE/youtube-video-live-view-count/9DBy1r7YMMg/embed"
+                                        allowFullScreen></iframe>
+                                </div>
                             </div>
                         </footer>
                     </div>
