--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
                                     </li>
                                 </ul>
                                 <div>
-                                    <img class="img-fluid"
-                                        src="https://static.wikia.nocookie.net/loonatheworld/images/c/cc/Queendom_2_logo_transparent.png/revision/latest/scale-to-width-down/350?cb=20220308081156"
-                                        alt="Queendom 2 Logo" />
+                                    <img class="img-fluid" src="assets/img/queendomlogo.png" alt="Queendom 2 Logo" />
                                     <p class="lead mb-5">
                                         <a href="https://www.youtube.com/watch?v=ytuMObZlqOE" target="_blank">Orbits,
                                             show your support
