--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
                                 </ul>
                                 <div>
                                     <img class="img-fluid" src="assets/img/queendomlogo.png" alt="Queendom 2 Logo" />
-                                    <p class="lead mb-5">
-                                        <a href="https://www.youtube.com/watch?v=ytuMObZlqOE" target="_blank">Orbits,
-                                            show your support
-                                            today by streaming Loona!</a>
+                                    <p class="lead mb-15">
+                                        <iframe height="95px" width="310px" frameborder="0"
+                                            src="https://socialcounts.org/compare/youtube-video-live-view-count/ytuMObZlqOE/youtube-video-live-view-count/9DBy1r7YMMg/embed"
+                                            allowFullScreen></iframe>
+                                    <H2><a href="https://www.youtube.com/watch?v=ytuMObZlqOE" target="_blank">Orbits,
+                                            stream Loona!</a></H2>
                                     </p>
-                                    <iframe height="95px" width="310px" frameborder="0"
-                                        src="https://socialcounts.org/compare/youtube-video-live-view-count/ytuMObZlqOE/youtube-video-live-view-count/9DBy1r7YMMg/embed"
-                                        allowFullScreen></iframe>
                                 </div>
                             </div>
                         </footer>
