--- a/bot/index.html
+++ b/bot/index.html
@@ -132,7 +132,7 @@
                                     <div class="card bg-grey" style="width:100%">
                                         <div class="card-body">
                                             <!-- Command -->
-                                            <h4 class="card-title big-text">%loonapic</h4>
+                                            <h4 class="card-title big-text">%loona</h4>
                                             <!-- Command Description -->
                                             <p class="card-text">For all you OT12's out there, a random pic of any Loona
                                                 member!</a>
