--- a/bot/index.html
+++ b/bot/index.html
@@ -89,6 +89,13 @@
                             class="btn btn-discord btn-block stretched-link big-small">Click here to view.</a>
                     </div>
                 </div>
+                <div class="card bg-grey" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title big-text">Terms of Service</h4>
+                        <a href="https://chuutopia.com/bot/tos"
+                            class="btn btn-discord btn-block stretched-link big-small">Click here to view.</a>
+                    </div>
+                </div>
                 <div class="row">
                     <h1 class="brand-line"><b>Global Commands!</b></h1>
                 </div>
