Updates to Bot page

--- a/bot/data/index.html
+++ b/bot/data/index.html
@@ -68,15 +68,22 @@
                         <p>We also lose the access to your nickname; server join timestamp and roles when either you
                             leave a server or Chuu’topia Bot gets removed from a server. We lose the access to basic
                             information (username, discrim, avatar hash) when both apply.</p>
-                        <p>The information we store in our database or logs is limited to your user ID, username/discriminator and when you used a Chuu’topia Bot command.</p>
-                        <p>The information we store in the application cache is limited to the events Discord sends to the bot in order to process them, which may temporarily include user ids, names, and message content.
-                            They aren't persisted to our database unless explicitly requested (e.g. when adding a command).
-                            This info is kept in memory until that part of the bot restarts, or it’s dropped from the cache, whichever comes first.
+                        <p>The information we store in our database or logs is limited to your user ID,
+                            username/discriminator and when you used a Chuu’topia Bot command.</p>
+                        <p>The information we store in the application cache is limited to the events Discord sends to
+                            the bot in order to process them, which may temporarily include user ids, names, and message
+                            content.
+                            They aren't persisted to our database unless explicitly requested (e.g. when adding a
+                            command).
+                            This info is kept in memory until that part of the bot restarts, or it’s dropped from the
+                            cache, whichever comes first.
                         </p>
                         <p>This info is fetched when we need it or is send together with events we receive from
                             discord, this is kept in memory until that part of the bot restarts, or it’s dropped from
                             the cache, whichever comes first.</p>
-                        <p>Processing data messages you send in Discord and other events you create are NOT STORED, we receive the events and process them where needed to provide the services you requested, this data is not stored for 
+                        <p>Processing data messages you send in Discord and other events you create are NOT STORED, we
+                            receive the events and process them where needed to provide the services you requested, this
+                            data is not stored for
                             any longer than is absolutely necessary.
                         </p>
                         <h5 class="card-title small-text"><i>If you have read this far you may also be interested
