--- a/bot/index.html
+++ b/bot/index.html
@@ -52,6 +52,12 @@
             <img class="fit-picture" src="asset/chuutopiabotbanner.png" alt="Chuu'topia Logo" style="width:100%">
         </div>
         <div class="row">
+            <div class="card bg-grey" style="width:100%">
+                <h1 class="verified-line"><b>A Verified Discord bot that delivers a random picture of Loona's Chuu to
+                        your server, created by @Maxr1998 in Chuu'topia!</b></h1>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
