update chuutopiabot button

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
                     <a class="portfolio-item" href="bot" target="_blank">
                         <div class="caption">
                             <div class="caption-content">
-                                <div class="h2">NOW LAUNCHED!!</div>
+                                <div class="h2">NOW Verified!!!!</div>
                                 <p class="mb-0">
-                                    From <code>%chuugif</code> to <code>%chuupic</code> and every
+                                    From <code>%chuu</code> to <code>%loona</code> and every
                                     <code>%ar</code>
                                     in between, invite Chuu'topia bot today!!
                                 </p>
