--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Chuu'topia</title>
     <meta name="description" content="The Chuu'iest server on Discord, come join us today!">
     <meta name="keywords"
-        content="Discord, Chuu, Loona, Chuu'topia, Chuutopia, cute, chuuie, friendly, aesthetic, chill, vibe, kim, jiwoo, orbit">
+        content="Discord, Chuu, Loona, Chuu'topia, Chuutopia, cute, chuuie, friendly, aesthetic, chill, vibe, kim, jiwoo, orbit, kkoti, howl, atrp, ">
 </head>
 
 <body id="#Chuu'topia">
@@ -39,7 +39,6 @@
             <li class="sidebar-nav-item"><a href="https://chuutopia.com/bot" target="_blank">Chuu'topia Bot</a></li>
         </ul>
     </nav>
-
     <!-- Header -->
     <!-- About -->
     <section class="content-section bg-light" id="Chuu'topia">
@@ -47,10 +46,10 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-10">
                     <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo" />
-                    <h2>Join Chuu'topia, the chuu'iest server on Discord!</h2>
+                    <h2>Happy Birthday Chuu!!</h2>
                     <p class="lead mb-5">
-                        Just as Chuu would want it, our community is friendly, loving, supportive and fun, with
-                        giveaways, bots and events galore. Join your new family today!
+                        Thankyou so much for being you, and for giving us Howl, we love it!!!
+                        BEST COMEBACK EVER!!!!
                     </p>
                     <a class="btn btn-dark btn-xl" href="https://discord.gg/uYe6JuTGPM">Join discord.gg/chuutopia</a>
                     <div>
@@ -107,57 +106,42 @@
                 </div>
             </div>
     </section>
-    <!-- Supporters -->
-    <section class="content-section bg-light" id="Supporters">
-        <div class="container px-4 px-lg-5 text-center">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-lg-10">
-                    <img class="img-fluid" src="assets/img/supporters.png" alt="Patreon Supporters" />
-                    <div>
-                    </div>
-                </div>
-            </div>
-    </section>
-    <!-- Services -->
+    <!-- Chuu Places -->
     <section class="content-section bg-primary text-white text-center" id="Chuu's-Places">
         <div class="container px-4 px-lg-5">
             <div class="content-section-heading">
-                <h3 class="text-secondary mb-0">Find out more about Loona!</h3>
+                <h3 class="text-secondary mb-0">Find out more about our beloved CHUU!</h3>
                 <h2 class="mb-5">Chuu's places :achuwu:!</h2>
             </div>
             <div class="row gx-4 gx-lg-5">
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                    <a href="https://www.youtube.com/channel/UChK2DhvPSG3sY0jIYYngVBA">
-                        <img class="img-fluid mb-2" src="assets/img/chuucandoit.gif"
-                            alt="chuucandoit YouTube channel" />
+                    <a href="https://www.instagram.com/chuu_atrp/">
+                        <img class="img-fluid mb-2" src="assets/img/chuupic1.png" alt="Chuu ATRP Instagram" />
                     </a>
-                    <h4><strong>Chuu Can Do It!</strong></h4>
-                    <p class="text-faded mb-0">Help Chuu save the environment!</p>
+                    <h4><strong>@chuu_atrp Instagram</strong></h4>
+                    <p class="text-faded mb-0">Wonder in amazement at Chuu!</p>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                    <a href="https://www.youtube.com/channel/UCA3IECrL0SXVfyv667lIj5Q/videos">
-                        <img class="img-fluid mb-2" src="assets/img/hauteurtheday.gif"
-                            alt="Hauteur the day YouTube channel" />
+                    <a href="https://www.youtube.com/@CHUUOfficial">
+                        <img class="img-fluid mb-2" src="assets/img/chuupic4.png" alt="Official CHUU YouTube channel" />
                     </a>
-                    <h4><strong>Hauteur the Day!</strong></h4>
-                    <p class="text-faded mb-0">Chuu pounces on shoppers in Seoul!</p>
+                    <h4><strong>CHUU Youtube!</strong></h4>
+                    <p class="text-faded mb-0">Everything CHUU Videos!!</p>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                    <a href="https://www.youtube.com/channel/UCOJplhB0wGQWv9OuRmMT-4g">
-                        <img class="img-fluid mb-2" src="assets/img/loonayt.gif" alt="Official LOONA YouTube channel" />
+                    <a href="https://twitter.com/chuu_atr">
+                        <img class="img-fluid mb-2" src="assets/img/chuupic3.png" alt="Official CHUU Twitter account" />
                     </a>
-                    <h4><strong>LOONA Youtube!</strong></h4>
-                    <p class="text-faded mb-0">LOONA MV's &amp; LOONA TV!</p>
+                    <h4><strong>@chuu_atrp X (Formerly Twitter)!</strong></h4>
+                    <p class="text-faded mb-0">Chuu's Official X Account!!</p>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                    <a href="https://twitter.com/loonatheworld?lang=en">
-                        <img class="img-fluid mb-2" src="assets/img/loonatwit.gif"
-                            alt="Official LOONA Twitter account" />
+                    <a href="https://www.instagram.com/chuuo3o/">
+                        <img class="img-fluid mb-2" src="assets/img/chuupic2.png" alt="CHUU's Personal Instagram" />
                     </a>
-                    <h4><strong>@loonatheworld!</strong></h4>
-                    <p class="text-faded mb-0">LOONA Twitter!</p>
+                    <h4><strong>Chuu's Personal Instagram</strong></h4>
+                    <p class="text-faded mb-0">CHUU's OWN INSTAGRAM!</p>
                 </div>
-            </div>
     </section>
     <!-- Portfolio -->
     <section class="content-section" id="Support-Us">
