--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <p class="text-faded mb-0">Everything CHUU Videos!!</p>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                    <a href="https://twitter.com/chuu_atr">
+                    <a href="https://twitter.com/chuu_atrp">
                         <img class="img-fluid mb-2" src="assets/img/chuupic3.png" alt="Official CHUU Twitter account" />
                     </a>
                     <h4><strong>@chuu_atrp X (Formerly Twitter)!</strong></h4>
