--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-10">
                     <img class="img-fluid" src="assets/img/chuutopiapurple.png" alt="Chuu'topia Logo" />
-                    <h2>Happy Birthday Chuu!!</h2>
-                    <p class="lead mb-5">
-                        Thankyou so much for being you, and for giving us Howl, we love it!!!
-                        BEST COMEBACK EVER!!!!
-                    </p>
+                    <h2>Join the Chuu'iest server on Discord!!</h2>
                     <a class="btn btn-dark btn-xl" href="https://discord.gg/uYe6JuTGPM">Join discord.gg/chuutopia</a>
                     <div>
                         <footer class="footer text-center">
